--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "calculator-app",
   "version": "1.0.0",
-  "description": "A modern desktop calculator",
+  "description": "A modern desktop calculator built with Electron",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "build": "electron-builder",
     "build:win": "electron-builder --win"
   },
   "devDependencies": {
@@ -14,11 +15,12 @@
   "build": {
     "appId": "com.bolt.calculator",
     "productName": "Bolt Calculator",
-    "win": {
-      "target": "nsis"
-    },
     "directories": {
       "output": "dist"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": null
     }
   }
 }
